submit to sign up

--- a/Auth/templates/Auth/index.html
+++ b/Auth/templates/Auth/index.html
@@ -29,7 +29,7 @@
 			<label for = "pwd">{{passwordLabel}}</label>
 			<input type = "password" class="form-control" id="password">
 			<br>
-			<button type="button" class ="btn btn-primary active">Submit</button>
+			<input type="submit" class ="btn btn-primary active" value = "Sign up">
 		</div>
 	</form>
 	
