--- a/Auth/templates/Auth/index.html
+++ b/Auth/templates/Auth/index.html
@@ -22,19 +22,16 @@
 			<label for = "name">{{useridLabel}}</label>
 			<input type = "text" class="form-control" id="username" name="username">
 			<label for = "name">First Name:</label>
-			<input type = "text" class="form-control" id="firstname">
+			<input type = "text" class="form-control" id="firstname" name  = "firstname">
 			<label for = "name">Last Name:</label>
-			<input type = "text" class="form-control" id="lastname">
+			<input type = "text" class="form-control" id="lastname" name = "lastname">
 			<label for = "email">Email:</label>
-			<input type = "email" class="form-control" id="email">
+			<input type = "email" class="form-control" id="email" name = "email">
 			<label for = "pwd">{{passwordLabel}}</label>
-			<input type = "password" class="form-control" id="password">
+			<input type = "password" class="form-control" id="password" name ="password">
+			<p>type = {{type}}</p>
 			<br>
-<<<<<<< HEAD
-			<button type="submit" class ="btn btn-primary active">Submit</button>
-=======
 			<input type="submit" class ="btn btn-primary active" value = "Sign up">
->>>>>>> origin/master
 		</div>
 	</form>
 	
