Added bootstrap library, changed layout of index.html, changed URL from login to signup

--- a/Auth/templates/Auth/index.html
+++ b/Auth/templates/Auth/index.html
@@ -1,39 +1,70 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script>
-	function validatesignup() {
-    var x = document.forms["myForm"]["fname"].value;
-    if (x == null || x == "") {
-        alert("Name must be filled out");
-        return false;
-    }
-}
-</script>
-</head>
-<body>
-<div class="container">
-  <h2>Task Manager</h2>            
-	<form action = "{% url 'Auth:details' %}" onsubmit="return validatesignup()" method = "post">
-		{% csrf_token %}
-		<div class="form-group">
-			<label for = "name">{{useridLabel}}</label>
-			<input type = "text" class="form-control" id="username" name="username">
-			<label for = "name">First Name:</label>
-			<input type = "text" class="form-control" id="firstname" name  = "firstname">
-			<label for = "name">Last Name:</label>
-			<input type = "text" class="form-control" id="lastname" name = "lastname">
-			<label for = "email">Email:</label>
-			<input type = "email" class="form-control" id="email" name = "email">
-			<label for = "pwd">{{passwordLabel}}</label>
-			<input type = "password" class="form-control" id="password" name ="password">
-			<p>type = {{type}}</p>
-			<br>
-			<input type="submit" class ="btn btn-primary active" value = "Sign up">
+	<head>
+		<meta charset="utf-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Tasks</title>
+		<link href="{% static 'Home/bootstrap-3.3.6-dist/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
+	</head>
+	<body style="background-size:100%;background-attachment:fixed;">
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="#">Task Manager</a>
+		    </div>
+
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      
+		    </div><!-- /.navbar-collapse -->
+		  </div><!-- /.container-fluid -->
+		</nav>
+	    
+	    <div class="container-fluid" style="padding-top:100px;padding-bottom: 55px;">
+		  <div class="row-fluid">
+		    <div class="col-md-2">
+		      This is span 2
+		    </div>
+		    <div class="col-md-8">
+		      <h2>Task Manager</h2>            
+				<form action = "{% url 'Auth:details' %}" onsubmit="return validatesignup()" method = "post">
+					{% csrf_token %}
+					<div class="form-group">
+						<label for = "name">{{useridLabel}}</label>
+						<input type = "text" class="form-control" id="username" name="username">
+						<label for = "name">First Name:</label>
+						<input type = "text" class="form-control" id="firstname" name  = "firstname">
+						<label for = "name">Last Name:</label>
+						<input type = "text" class="form-control" id="lastname" name = "lastname">
+						<label for = "email">Email:</label>
+						<input type = "email" class="form-control" id="email" name = "email">
+						<label for = "pwd">{{passwordLabel}}</label>
+						<input type = "password" class="form-control" id="password" name ="password">
+						<p>type = {{type}}</p>
+						<br>
+						<input type="submit" class ="btn btn-primary active" value = "Sign up">
+					</div>
+				</form>
+		    </div>
+		    <div class="col-md-2">
+		      This is span 2
+		    </div>
+		  </div>
 		</div>
-	</form>
-	
-</body>
+		<footer class="footer navbar-fixed-bottom well" style="text-align: center;padding:10px;">
+			&copy; 2013			
+		</footer>	
+		<script src="{% static 'Home/jquery-2.2.0.min.js' %}"></script>
+		<script src="{% static 'Home/bootstrap-3.3.6-dist/js/bootstrap.min.js' %}"></script>
+	</body>
 </html>
