--- a/Auth/templates/Auth/index.html
+++ b/Auth/templates/Auth/index.html
@@ -1,36 +1,6 @@
-{% load staticfiles %}
+{% extends "Auth/base.html" %}
+{% block main_content %}
 
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Tasks</title>
-		<link href="{% static 'Home/bootstrap-3.3.6-dist/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
-	</head>
-	<body style="background-size:100%;background-attachment:fixed;">
-		<nav class="navbar navbar-default">
-		  <div class="container-fluid">
-		    <!-- Brand and toggle get grouped for better mobile display -->
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		      <a class="navbar-brand" href="#">Task Manager</a>
-		    </div>
-
-		    <!-- Collect the nav links, forms, and other content for toggling -->
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		      
-		    </div><!-- /.navbar-collapse -->
-		  </div><!-- /.container-fluid -->
-		</nav>
-	    
-	    <div class="container-fluid" style="padding-top:100px;padding-bottom: 55px;">
 		  <div class="row-fluid">
 		    <div class="col-md-2">
 		      This is span 2
@@ -60,11 +30,4 @@
 		      This is span 2
 		    </div>
 		  </div>
-		</div>
-		<footer class="footer navbar-fixed-bottom well" style="text-align: center;padding:10px;">
-			&copy; 2013			
-		</footer>	
-		<script src="{% static 'Home/jquery-2.2.0.min.js' %}"></script>
-		<script src="{% static 'Home/bootstrap-3.3.6-dist/js/bootstrap.min.js' %}"></script>
-	</body>
-</html>
+{% endblock %}		
