--- a/Auth/templates/Auth/index.html
+++ b/Auth/templates/Auth/index.html
@@ -6,7 +6,7 @@
 		      This is span 2
 		    </div>
 		    <div class="col-md-8">
-		      <h2>Task Manager</h2>            
+		      <h2>Signup</h2>            
 				<form action = "{% url 'Auth:details' %}" onsubmit="return validatesignup()" method = "post">
 					{% csrf_token %}
 					<div class="form-group">
