connected login page with signup page

--- a/Auth/templates/Auth/index.html
+++ b/Auth/templates/Auth/index.html
@@ -18,9 +18,10 @@
 						<input type = "text" class="form-control" id="lastname" name = "lastname">
 						<label for = "email">Email:</label>
 						<input type = "email" class="form-control" id="email" name = "email">
+						<label for = "email">Phone:</label>
+						<input type = "text" class="form-control" id="phone" name = "phone">
 						<label for = "pwd">{{passwordLabel}}</label>
 						<input type = "password" class="form-control" id="password" name ="password">
-						<p>type = {{type}}</p>
 						<br>
 						<input type="submit" class ="btn btn-primary active" value = "Sign up">
 					</div>
