--- a/Task/templates/Task/addtask.html
+++ b/Task/templates/Task/addtask.html
@@ -1,20 +1,96 @@
-{% extends "Task/base.html" %}
-{% block main_content %}
-<div class="modal fade" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Add Task</h4>
       </div>
-      <div class="modal-body">
-        <p>One fine body&hellip;</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
+	  <form class="form-horizontal" id="addtask_form" method="POST">
+	  {% csrf_token %}
+		  <div class="modal-body">
+			  <div class="form-group">
+				<label for="title" class="col-sm-2 control-label">Title</label>
+				<div class="col-sm-10"><input type="text" class="form-control" id="title"></div>
+			  </div>
+			  <div class="form-group">
+				<label for="description" class="col-sm-2 control-label">Description</label>
+				<div class="col-sm-10"><textarea class="form-control" id="description" rows="3"></textarea></div>
+			  </div>
+			  <div class="form-group">
+				<label for="start_date" class="col-sm-2 control-label">Start Date</label>
+				<div class="col-sm-10"><input type="date" class="form-control" id="start_date"></div>
+			  </div>
+			  <div class="form-group">
+				<label for="due_date" class="col-sm-2 control-label">Due Date</label>
+				<div class="col-sm-10"><input type="date" class="form-control" id="due_date"></div>
+			  </div>
+			  <div class="form-group">
+				<label for="time_counter" class="col-sm-2 control-label">Set Reminder Before</label>
+				<div class="col-sm-10">
+					<input type="number" class="form-control" id="time_counter">
+					<select class="form-control" id="time_span">
+					  <option>Hours</option>
+					  <option>Days</option>
+					</select></div>
+			  </div>
+			  <div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+				  <div class="checkbox"><label><input type="checkbox" id="repeat_checkbox" onchange="toggle_repeat_form()" checked="true">Repeat</label></div>
+				</div>
+			  </div>
+			  <div class="form-group" id="repeat_form">
+				<label for="time_counter" class="col-sm-2 control-label">Repeat</label>
+				<div class="col-sm-10">
+					<input type="number" class="form-control" id="time_counter" value="0">
+					<select class="form-control" id="time_span">
+					  <option>Days</option>
+					  <option>Weeks</option>
+					  <option>Months</option>
+					  <option>Years</option>
+					</select></div>
+			  </div>
+		  </div>
+		  <div class="modal-footer">
+			<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+			<button type="submit" class="btn btn-primary">Save</button>
+		  </div>
+	  </form>
+    </div>
+  </div>
 </div>
-{% endblock %}
+<script type="text/javascript">	
+	function toggle_repeat_form(isChecked){
+		//TODO: write logic to toggle 'repeat_form'
+	}
+	
+	$('#addtask_form').on('submit', function(event){
+		event.preventDefault();
+		console.log("form submitted!")  // sanity check
+		create_post();
+	});
+	
+	function create_post() {
+    console.log("create post is working!") // sanity check
+    $.ajax({
+        url : "http://localhost:8000/Task/addtask/", // the endpoint
+        type : "POST", // http method
+        data : { the_post : $('#title').val() }, // data sent with the post request
+
+        // handle a successful response
+        success : function(json) {
+			alert("Pass!");
+            $('#title').val(''); // remove the value from the input
+            console.log(json); // log the returned json to the console
+            console.log("success"); // another sanity check
+        },
+
+        // handle a non-successful response
+        error : function(xhr,errmsg,err) {
+			alert("Failed!");
+            //$('#results').html("<div class='alert-box alert radius' data-alert>Oops! We have encountered an error: "+errmsg+
+            //    " <a href='#' class='close'>&times;</a></div>"); // add the error to the dom
+            console.log(xhr.status + ": " + xhr.responseText); // provide a bit more info about the error to the console
+        }
+    });
+};
+</script>
