--- a/Task/templates/Task/addtask.html
+++ b/Task/templates/Task/addtask.html
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">Add Task</h4>
       </div>
-	  <form class="form-horizontal" id="addtask_form" method="POST">
+	  <form action = "{% url 'Task:addtask' %}"class="form-horizontal" id="addtask_form" method="POST">
 	  {% csrf_token %}
 		  <div class="modal-body">
 			  <div class="form-group">
@@ -58,39 +58,3 @@
     </div>
   </div>
 </div>
-<script type="text/javascript">	
-	function toggle_repeat_form(isChecked){
-		//TODO: write logic to toggle 'repeat_form'
-	}
-	
-	$('#addtask_form').on('submit', function(event){
-		event.preventDefault();
-		console.log("form submitted!")  // sanity check
-		create_post();
-	});
-	
-	function create_post() {
-    console.log("create post is working!") // sanity check
-    $.ajax({
-        url : "http://localhost:8000/Task/addtask/", // the endpoint
-        type : "POST", // http method
-        data : { the_post : $('#title').val() }, // data sent with the post request
-
-        // handle a successful response
-        success : function(json) {
-			alert("Pass!");
-            $('#title').val(''); // remove the value from the input
-            console.log(json); // log the returned json to the console
-            console.log("success"); // another sanity check
-        },
-
-        // handle a non-successful response
-        error : function(xhr,errmsg,err) {
-			alert("Failed!");
-            //$('#results').html("<div class='alert-box alert radius' data-alert>Oops! We have encountered an error: "+errmsg+
-            //    " <a href='#' class='close'>&times;</a></div>"); // add the error to the dom
-            console.log(xhr.status + ": " + xhr.responseText); // provide a bit more info about the error to the console
-        }
-    });
-};
-</script>
