added logout link in Task:base.html and removed logout link from Auth:base.html

--- a/Auth/templates/Auth/base.html
+++ b/Auth/templates/Auth/base.html
@@ -24,15 +24,7 @@
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-					<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">{{userid}}<b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a href="../Auth/index.html">Logout</a></li>
-						<li class="divider"></li>
-						<li><a href="../erp/index.html">Change Password</a></li>
-						<li><a href="../erp/index.html">Help</a></li>
-					</ul>
-				</ul>
+				<!--TODO: This part of navbar can be used to add additional feature in future -->
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
