--- a/Task/templates/Task/base.html
+++ b/Task/templates/Task/base.html
@@ -27,7 +27,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">{{userid}}<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="../Auth/index.html">Logout</a></li>
+						<li><a href="{% url 'Auth:login' %}">Logout</a></li>
 						<li class="divider"></li>
 						<li><a href="../erp/index.html">Change Password</a></li>
 						<li><a href="../erp/index.html">Help</a></li>
