--- a/Task/templates/Task/base.html
+++ b/Task/templates/Task/base.html
@@ -37,7 +37,7 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 	    
-	    <div class="container-fluid" style="padding-top:100px;padding-bottom: 55px;">		
+	    <div class="container-fluid" style="padding-bottom: 55px;">		
 			{% block main_content %}
 			{% endblock %}
 		</div>
